# socat-rs

./: ._README.md  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
crates/socat-rs-compat/: Cargo.toml
crates/socat-rs-compat/src/: lib.rs
crates/socat-rs-core/: Cargo.toml
crates/socat-rs-core/src/: app.rs  cli.rs  endpoint.rs  error.rs  lib.rs  metrics.rs  relay.rs  spec.rs
docs/: ALL_FEATURES.en.md  ALL_FEATURES.zh-CN.md  FEATURE_STATUS.en.md  FEATURE_STATUS.zh-CN.md  V1_READY.en.md  V1_READY.zh-CN.md  compatibility-roadmap.md  socat-analysis.md
scripts/: extract_legacy_inventory.sh  package-artifact.sh
src/: main.rs
tests/: json_protocol_smoke.rs  parser_smoke.rs
