[package]
name = "socat-rs-core"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
socat-rs-compat = { path = "../socat-rs-compat" }
